--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "version": "3.2.0",
     "description": "Create S3 urls from bucket/key or extract bucket/key from them",
-    "main": "index.js",
+    "main": "dist/index.js",
+    "types": "index.ts",
     "engines": {
         "node": ">= 6.10.3"
     },
@@ -28,12 +29,14 @@
     },
     "homepage": "https://github.com/openaddresses/s3urls",
     "devDependencies": {
-        "cross-exec-file": "^2.0.0",
         "eslint": "^8.17.0",
         "eslint-plugin-node": "^11.0.0",
-        "tape": "^5.0.1"
-    },
-    "dependencies": {
-        "minimist": "^1.1.0"
+        "tape": "^5.0.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5",
+        "@types/node": "^18.13.0",
+        "@types/tape": "^4.13.2",
+        "@typescript-eslint/eslint-plugin": "^5.52.0",
+        "@typescript-eslint/parser": "^5.52.0"
     }
 }
